# listo

./: .gitignore  CLAUDE.md  README.md  buf.gen.yaml  buf.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_property_type.py  0003_da_tables.py  0004_mortgage_rates.py  0005_da_doc_page_count.py  0006_council_tables.py  0007_doc_published_at.py  0008_council_scrape_windows.py  0009_property_history.py  0010_realestate_property.py  0011_listings_and_discovery.py  0012_da_summaries.py  0013_prompt_templates.py  0014_document_features.py  0015_companies.py  0016_entity_fields.py  0017_da_build_features.py  0018_companies_asic_fields.py  0019_application_entities.py  0020_entity_evidence.py  0021_doc_kind.py  0022_doc_fingerprints.py  0023_dedupe_property_natural_keys.py  0024_property_scrape_attempts.py
api/: .env.example  Cargo.toml  build.rs
api/src/: classify.rs  config.rs  db.rs  error.rs  geo.rs  main.rs
api/src/service/: applications.rs  conv.rs  map.rs  mod.rs  profit.rs  rates.rs  stats.rs  status.rs
data/: council_portals.json
data/asic_probe/: 01_landing.html  02_direct.html  03_filled.html  04_results.html  05_pre_submit.html  06_results.html  06_t15s.html  06_t5s.html  adf_notbound_1777603333.html  adf_notbound_1777603516.html  detail_056633704.html  details.json  (+17 more)
proto/: listo.proto
scrape/: Cargo.toml
scripts/: analyse_da.sh  asic_probe.py  asic_scrape.py  etl_pdp_raw_pages.py  etl_remerge.py  etl_remerge_properties.py  etl_verify.py  run-scrape.sh  scrape_monthly.sh  server-tunnel.sh
tests/: test_address.py  test_councils.py  test_json_unescape.py  test_parse_domain.py  test_parse_realestate.py  test_rba.py  test_rent_filter.py
web/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
(+112 files in other folders)
