[project]
name = "listo"
version = "0.1.0"
description = "Gold Coast real-estate scraper for duplex/triplex redevelopment detection"
requires-python = ">=3.12"
dependencies = [
    "httpx[http2]>=0.27",
    "curl-cffi>=0.7",
    "browser-cookie3>=0.20",
    "playwright>=1.48",
    "patchright>=1.48",
    "pypdf>=4.0",
    "sqlalchemy>=2.0",
    "pymysql>=1.1",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "selectolax>=0.3.21",
    "tenacity>=8.4",
    "python-dotenv>=1.0",
]

[project.scripts]
listo = "listo.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/listo"]

[dependency-groups]
dev = [
    "pytest>=8.2",
    "pytest-mock>=3.14",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
