[package]
name = "listo-api"
version = "0.1.0"
edition = "2021"
description = "gRPC (tonic + tonic-web) API over the Listo MySQL — feeds the TypeScript frontend"

[dependencies]
tonic = "0.12"
tonic-web = "0.12"
prost = "0.13"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio-rustls", "mysql", "macros", "chrono", "json"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
anyhow = "1"
regex = "1"
once_cell = "1"

[build-dependencies]
tonic-build = "0.12"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
